--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <section class="relative">
             <div class="carousel h-[200px] mx-3 lg:h-[550px] mt-12 mb-4 lg:mb-24">
                 <div id="slide1" class="carousel-item relative w-full">
-                    <img src="../Images/1.png" class="w-full" />
+                    <img src="./Images/1.png" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide2" class="btn btn-circle">❮</a>
                         <a href="#slide2" class="btn btn-circle">❯</a>
